appId: org.openwaqf.signer
---
- waitForAnimationToEnd
- runFlow:
    when:
      visible:
        id: "btn-sample"
    commands:
      - tapOn:
          id: "btn-sample"
- runFlow:
    when:
      visible: "No file? Try with a sample PDF"
    commands:
      - tapOn: "No file? Try with a sample PDF"
- runFlow:
    when:
      visible: "ليس لديك ملف؟ جرب نموذج PDF"
    commands:
      - tapOn: "ليس لديك ملف؟ جرب نموذج PDF"
- runFlow:
    when:
      visible: "Pas de fichier ? Essayez avec un PDF d'exemple"
    commands:
      - tapOn: "Pas de fichier ? Essayez avec un PDF d'exemple"
- waitForAnimationToEnd
- assertVisible:
    id: "btn-exit"
- runFlow:
    when:
      visible:
        id: "btn-add-date"
    commands:
      - tapOn:
          id: "btn-add-date"
- runFlow:
    when:
      visible:
        id: "m-btn-add-date"
    commands:
      - tapOn:
          id: "m-btn-add-date"
- runFlow:
    when:
      visible: "+ Date"
    commands:
      - tapOn: "+ Date"
- runFlow:
    when:
      visible: "+ تاريخ"
    commands:
      - tapOn: "+ تاريخ"
- tapOn:
    id: "btn-exit"
- waitForAnimationToEnd
- assertVisible:
    id: "btn-cancel-exit"
- tapOn:
    id: "btn-cancel-exit"
- tapOn:
    id: "btn-exit"
- assertVisible:
    id: "btn-confirm-exit"
- tapOn:
    id: "btn-confirm-exit"
- waitForAnimationToEnd
- runFlow:
    when:
      visible:
        id: "btn-sign-mode"
    commands:
      - assertVisible:
          id: "btn-sign-mode"
- runFlow:
    when:
      visible: "Sign"
    commands:
      - assertVisible: "Sign"
