appId: org.openwaqf.signer
---
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "Exit"
    commands:
      - tapOn: "Exit"
      - waitForAnimationToEnd
- runFlow:
    when:
      visible: "خروج"
    commands:
      - tapOn: "خروج"
      - waitForAnimationToEnd
- runFlow:
    when:
      visible: "Quitter"
    commands:
      - tapOn: "Quitter"
      - waitForAnimationToEnd

- runFlow:
    when:
      visible:
        id: "btn-sample"
    commands:
      - tapOn:
          id: "btn-sample"
- runFlow:
    when:
      visible: "No file? Try with a sample PDF"
    commands:
      - tapOn: "No file? Try with a sample PDF"
- runFlow:
    when:
      visible: "ليس لديك ملف؟ جرب نموذج PDF"
    commands:
      - tapOn: "ليس لديك ملف؟ جرب نموذج PDF"
- runFlow:
    when:
      visible: "Pas de fichier ? Essayez avec un PDF d'exemple"
    commands:
      - tapOn: "Pas de fichier ? Essayez avec un PDF d'exemple"
- runFlow:
    when:
      visible:
        id: "btn-sign-mode"
    commands:
      - tapOn:
          id: "btn-sign-mode"
- waitForAnimationToEnd
- assertVisible:
    id: "btn-exit"
- tapOn:
    id: "btn-exit"
- waitForAnimationToEnd
- assertVisible:
    id: "btn-sign-mode"

- runFlow:
    when:
      visible:
        id: "btn-sample"
    commands:
      - tapOn:
          id: "btn-sample"
- runFlow:
    when:
      visible: "No file? Try with a sample PDF"
    commands:
      - tapOn: "No file? Try with a sample PDF"
- runFlow:
    when:
      visible: "ليس لديك ملف؟ جرب نموذج PDF"
    commands:
      - tapOn: "ليس لديك ملف؟ جرب نموذج PDF"
- runFlow:
    when:
      visible: "Pas de fichier ? Essayez avec un PDF d'exemple"
    commands:
      - tapOn: "Pas de fichier ? Essayez avec un PDF d'exemple"
- runFlow:
    when:
      visible:
        id: "btn-sign-mode"
    commands:
      - tapOn:
          id: "btn-sign-mode"
- waitForAnimationToEnd
- assertVisible:
    id: "btn-exit"
- tapOn:
    id: "btn-exit"
- waitForAnimationToEnd
- assertVisible:
    id: "btn-sign-mode"
